arete-macros/tests/ui/validation_errors/invalid_proto_literal.stderr
error: Expected string literal or array of string literals
 --> tests/ui/validation_errors/invalid_proto_literal.rs:3:17
  |
3 | #[arete(proto = true)]
  |                 ^^^^
