arete-macros/tests/ui/validation_errors/invalid_proto_literal.rs
use arete_macros::arete;

#[arete(proto = true)]
mod broken {}

fn main() {}
